fixed a bug in decompose_mesh_MPI introduced when I added support for QKappa; removed an old sentence in the users manual that said that the internal mesher did not support PMLs (it now does)

--- a/doc/USER_MANUAL/bibliography.bib
+++ b/doc/USER_MANUAL/bibliography.bib
@@ -769,6 +769,16 @@
   Doi                      = {10.1007/s10518-006-0001-3}
 }
 
+@InProceedings{ApMoCoCh04,
+  Title                    = {Simulations of the influence of the grains orientations on ultrasounds},
+  Author                   = {Apfel, A. and Moysan, J. and Corneloup, G. and Chassignole, B.},
+  Booktitle                = {Proceedings of the 16th WCNDT World Conference on Non-Destructive Testing, Aug 30 - Sep 3, 2004, Paper number 414},
+  Year                     = {2004},
+
+  Address                  = {Montreal, Canada},
+  Pages                    = {1-8}
+}
+
 @Article{ApKr06,
   Title                    = {A new absorbing layer for elastic waves},
   Author                   = {Daniel Appel\"o and Gunilla Kreiss},
@@ -850,7 +860,7 @@
   Journal                  = {Physics in Medicine and Biology},
   Year                     = {2013},
   Number                   = {19},
-  Pages                    = {6765},
+  Pages                    = {6765-6778},
   Volume                   = {58},
 
   Doi                      = {10.1088/0031-9155/58/19/6765}
@@ -1366,10 +1376,11 @@
 }
 
 @Article{BaChLa77,
-  Title                    = {Une application de la th\'eorie du contr\^ole \`a un probl\`eme inverse sismique},
+  Title                    = {Une application de la th\'eorie du contr\^ole \`a un probl\`eme inverse de sismique},
   Author                   = {Bamberger, A. and Chavent, G. and Lailly, P.},
-  Journal                  = {Ann. Geophys.},
+  Journal                  = {Annales de G\'eophysique},
   Year                     = {1977},
+  Number                   = {1/2},
   Pages                    = {183-200},
   Volume                   = {33}
 }
@@ -2231,11 +2242,22 @@
   Doi                      = {10.1002/nme.1325}
 }
 
+@Manual{Cubit2017,
+  Title                    = {{CUBIT} 15.3 User Documentation},
+
+  Address                  = {Albuquerque, New Mexico, USA},
+  Author                   = {T. D. Blacker and P. Knupp and R. R. Lober and D. Melander and G. D. Sjaardema and W. A. Sample and M. K. Smith and T. J. Tautges and D. R. White and S. Benzley and R. Kerr and S. R. Jankovich and D. B. McRae and M. Panthaki},
+  Month                    = {July},
+  Note                     = {https://cubit.sandia.gov/public/15.3/help\_manual/WebHelp/cubithelp.htm},
+  Organization             = {Sandia National Laboratories},
+  Year                     = {2017}
+}
+
 @Manual{Bl94,
   Title                    = {{CUBIT} Mesh Generation Environment Users Manual Vol. 1},
 
-  Address                  = {Albuquerque, NM},
-  Author                   = {T.D. Blacker and P. Knupp and R. r. Lober and D. Melander and G. D. Sjaardema and W. A. Sample and M. K. Smith and T. J. Tautges and D. R. White and S. Benzley and R. Kerr and S. R. Jankovich and D. B. McRae and M. Panthaki},
+  Address                  = {Albuquerque, New Mexico, USA},
+  Author                   = {T. D. Blacker and P. Knupp and R. R. Lober and D. Melander and G. D. Sjaardema and W. A. Sample and M. K. Smith and T. J. Tautges and D. R. White and S. Benzley and R. Kerr and S. R. Jankovich and D. B. McRae and M. Panthaki},
   Organization             = {Sandia National Laboratories},
   Year                     = {1994}
 }
@@ -2851,11 +2873,13 @@
   Volume                   = {103}
 }
 
-@Book{Buckingham1992,
+@Article{Buckingham1992,
   Title                    = {Ocean-acoustic propagation models},
   Author                   = {Buckingham, Michael J.},
-  Publisher                = {EUR-OP},
-  Year                     = {1992}
+  Journal                  = {J. Acoustique},
+  Year                     = {1992},
+  Pages                    = {223-287},
+  Volume                   = {3}
 }
 
 @Article{Buckingham1987,
@@ -3411,10 +3435,12 @@
 }
 
 @InProceedings{CaStLeKoPiTr08,
-  Title                    = {CUBIT and Seismic Wave Propagation Based Upon the Spectral-Element Method: An Advanced Unstructured Mesher for Complex 3D Geological Media},
+  Title                    = {{CUBIT} and seismic wave propagation based upon the spectral-element method: {A}n advanced unstructured mesher for complex {3D} geological media},
   Author                   = {E. Casarotti and M. Stupazzini and S. Lee and D. Komatitsch and A. Piersanti and J. Tromp},
   Booktitle                = {Proceedings of the 16th International Meshing Roundtable},
   Year                     = {2008},
+
+  Address                  = {Seattle, Washington, USA},
   Pages                    = {579-597},
   Volume                   = {5B.4}
 }
@@ -3739,7 +3765,7 @@
 }
 
 @Article{chan2015,
-  Title                    = {High frequency guided ultrasonic waves for hidden fatigue crack growth monitoring in multi-layer model aerospace structures},
+  Title                    = {High-frequency guided ultrasonic waves for hidden fatigue crack growth monitoring in multi-layer model aerospace structures},
   Author                   = {Chan, Henry and Masserey, Bernard and Fromme, Paul},
   Journal                  = {Smart Materials and Structures},
   Year                     = {2015},
@@ -3794,6 +3820,18 @@
   Volume                   = {22},
 
   Doi                      = {10.1137/S1064827598343735}
+}
+
+@Article{ChDuFoLeMoBe11,
+  Title                    = {Application of modelling for enhanced ultrasonic inspection of stainless steel welds},
+  Author                   = {B. Chassignole and O. Dupond and T. Fouquet and Le Brun, A. and J. Moysan and P. Benoist},
+  Journal                  = {Welding in the World},
+  Year                     = {2011},
+  Number                   = {7-8},
+  Pages                    = {75-82},
+  Volume                   = {55},
+
+  Doi                      = {10.1007/BF03321310}
 }
 
 @Article{ChDuPlGuEl09,
@@ -6465,6 +6503,18 @@
   Doi                      = {10.1016/j.ultras.2018.03.003}
 }
 
+@Article{FeVeWiBaDu14,
+  Title                    = {Simulation of the ultrasonic array response from real branched cracks using an efficient finite element method},
+  Author                   = {Felice, Maria V. and Velichko, Alexander and Wilcox, Paul D. and Barden, Tim J. and Dunhill, Tony K.},
+  Journal                  = {AIP Conference Proceedings},
+  Year                     = {2014},
+  Number                   = {1},
+  Pages                    = {100-107},
+  Volume                   = {1581},
+
+  Doi                      = {10.1063/1.4864808}
+}
+
 @Article{FeDe84,
   Title                    = {Finite-element analysis of shock-induced hull cavitation},
   Author                   = {C. A. Felippa and J. A. Deruntz},
@@ -6489,7 +6539,7 @@
 @Article{fellinger1995,
   Title                    = {Numerical modeling of elastic wave propagation and scattering with {EFIT}-elastodynamic finite integration technique},
   Author                   = {Fellinger, P. and Marklein, R. and Langenberg, K. J. and Klaholz, S.},
-  Journal                  = {Wave motion},
+  Journal                  = {Wave Motion},
   Year                     = {1995},
   Number                   = {1},
   Pages                    = {47-66},
@@ -7183,6 +7233,18 @@
   Volume                   = {159}
 }
 
+@Article{GaBrRoMaKoSpLoBa17,
+  Title                    = {Finite-difference modeling of acoustic and gravity wave propagation in {M}ars atmosphere: {A}pplication to infrasounds emitted by meteor impacts},
+  Author                   = {Garcia, Rapha\"el F. and Brissaud, Quentin and Rolland, Lucie and Martin, Roland and Komatitsch, Dimitri and Spiga, Aymeric and Lognonn{\'e}, Philippe and Banerdt, Bruce},
+  Journal                  = {Space Science Reviews},
+  Year                     = {2017},
+  Number                   = {1},
+  Pages                    = {547-570},
+  Volume                   = {211},
+
+  Doi                      = {10.1007/s11214-016-0324-6}
+}
+
 @Article{Garland:2008:PCE,
   Title                    = {Parallel Computing Experiences with {CUDA}},
   Author                   = {Michael Garland and Scott Le Grand and John Nickolls and Joshua A. Anderson and Jim Hardwick and Scott Morton and Everett H. Phillips and Yao Zhang and Vasily Volkov},
@@ -7743,9 +7805,9 @@
 }
 
 @Article{GoOs09,
-  Title                    = {The Split {B}regman Method for {$L^1$}-Regularized Problems},
+  Title                    = {The split {B}regman method for $l_1$-regularized problems},
   Author                   = {Goldstein, Tom and Osher, Stanley},
-  Journal                  = {SIAM J. Img. Sci.},
+  Journal                  = {SIAM Journal on Imaging Sciences},
   Year                     = {2009},
   Number                   = {2},
   Pages                    = {323-343},
@@ -7961,6 +8023,8 @@
   Author                   = {D. W. Greve and J. J. Neumann and J. H. Nieuwenhuis and I. J. Oppenheim and N. L. Tyson},
   Booktitle                = {Proceedings of SPIE Smart Structures and Materials 2005: Sensors and Smart Structures Technologies for Civil, Mechanical, and Aerospace Systems},
   Year                     = {2005},
+
+  Address                  = {San Diego, California, USA},
   Editor                   = {Masayoshi Tomizuka},
   Volume                   = {5765},
 
@@ -11471,6 +11535,16 @@
   Volume                   = {6}
 }
 
+@Article{Leveque2007,
+  Title                    = {Correction of diffraction effects in sound velocity and absorption measurements},
+  Author                   = {G. L\'ev\^eque and E. Rosenkrantz and D. Laux},
+  Journal                  = {Measurement Science and Technology},
+  Year                     = {2007},
+  Number                   = {11},
+  Pages                    = {3458},
+  Volume                   = {18}
+}
+
 @Article{LaHu10,
   Title                    = {A non-uniform basis order for the discontinuous {G}alerkin method of the {3D} dissipative wave equation with perfectly matched layer},
   Author                   = {L\"{a}hivaara, T. and Huttunen, T.},
@@ -11589,6 +11663,16 @@
   Note                     = {536 pages.}
 }
 
+@Article{langenberg2000,
+  Title                    = {Application of modeling techniques for ultrasonic austenitic weld inspection},
+  Author                   = {Langenberg, K. J. and Hannemann, R. and Kaczorowski, T. and Marklein, R. and Koehler, B. and Schurig, C. and Walte, F.},
+  Journal                  = {NDT \& E International},
+  Year                     = {2000},
+  Number                   = {7},
+  Pages                    = {465-480},
+  Volume                   = {33}
+}
+
 @Article{Lap61,
   Title                    = {The transmission of a {R}ayleigh pulse round a corner},
   Author                   = {E. R. Lapwood},
@@ -11621,7 +11705,7 @@
 
 @InCollection{Lasaygues2010,
   Title                    = {Ultrasonic Computed Tomography},
-  Author                   = {Lasaygues, Philippe and Guillermin, R/'egine and Lefebvre, Jean-Pierre},
+  Author                   = {Lasaygues, Philippe and Guillermin, R\'egine and Lefebvre, Jean-Pierre},
   Booktitle                = {Bone Quantitative Ultrasound},
   Publisher                = {Springer Netherlands},
   Year                     = {2010},
@@ -11977,16 +12061,6 @@
   Volume                   = {53},
 
   Doi                      = {10.1190/1.1442422}
-}
-
-@Article{Leveque2007,
-  Title                    = {Correction of diffraction effects in sound velocity and absorption measurements},
-  Author                   = {G. Leveque and E. Rosenkrantz and D. Laux},
-  Journal                  = {Measurement Science and Technology},
-  Year                     = {2007},
-  Number                   = {11},
-  Pages                    = {3458},
-  Volume                   = {18}
 }
 
 @Article{LeDaMaEaVe00,
@@ -13199,6 +13273,17 @@
   Doi                      = {10.3970/cmes.2010.056.017}
 }
 
+@Article{MaOgKoJe18,
+  Title                    = {Parallel three-dimensional electrical capacitance data imaging using a nonlinear inversion algorithm and {$L^p$} norm-based model regularization},
+  Author                   = {Roland Martin and Vitaliy Ogarko and Dimitri Komatitsch and Mark Jessell},
+  Journal                  = {Measurement},
+  Year                     = {2018},
+  Pages                    = {428-445},
+  Volume                   = {128},
+
+  Doi                      = {10.1016/j.measurement.2018.05.099}
+}
+
 @Article{MaMaTuMoFl14,
   Title                    = {The tectono-sedimentary evolution of a hyper-extended rift basin: the example of the {A}rzacq-{M}aul\'eon rift system ({W}estern {P}yrenees, {F}rance)},
   Author                   = {Masini, E. and Manatschal, G. and Tugend, J. and Mohn, G. and Flament, J. M.},
@@ -13250,6 +13335,17 @@
   Volume                   = {36}
 }
 
+@Article{MaMoBi19,
+  Title                    = {Transmission of {L}amb waves across a partially-closed crack: {N}umerical analysis and experiment},
+  Author                   = {Mutsuki Matsushita and Naoki Mori and Shiro Biwa},
+  Journal                  = {Ultrasonics},
+  Year                     = {2019},
+  Pages                    = {57-67},
+  Volume                   = {92},
+
+  Doi                      = {10.1016/j.ultras.2018.09.007}
+}
+
 @Article{MaWaLiDuAn17,
   Title                    = {Regularized dual averaging image reconstruction for full-wave ultrasound computed tomography},
   Author                   = {Thomas P. Matthews and Kun Wang and Cuiping Li and Neb Duric and Mark A. Anastasio},
@@ -13272,16 +13368,6 @@
   Volume                   = {9},
 
   Doi                      = {10.1080/09349849709409608}
-}
-
-@Article{mattsson1997,
-  Title                    = {Three-dimensional ultrasonic crack detection in anisotropic materials},
-  Author                   = {Mattsson, J. and Niklasson, A. J. and Eriksson, A.},
-  Journal                  = {Research in nondestructive evaluation},
-  Year                     = {1997},
-  Number                   = {2},
-  Pages                    = {59-79},
-  Volume                   = {9}
 }
 
 @Article{MaDe12,
@@ -14093,6 +14179,43 @@
   Volume                   = {33},
 
   Doi                      = {10.1002/2014TC003663}
+}
+
+@Article{MoApCoCh03,
+  Title                    = {Modelling the grain orientation of austenitic stainless steel multipass welds to improve ultrasonic assessment of structural integrity},
+  Author                   = {Moysan, J. and Apfel, A. and Corneloup, G. and Chassignole, B.},
+  Journal                  = {International Journal of Pressure Vessels and Piping},
+  Year                     = {2003},
+  Number                   = {2},
+  Pages                    = {77-85},
+  Volume                   = {80}
+}
+
+@Article{MoCoChGuPl12,
+  Title                    = {Modelling welded material for ultrasonic testing using {MINA: T}heory and applications},
+  Author                   = {Moysan, J. and Corneloup, G. and Chassignole, B. and Gueudr\'e, C. and Ploix, M. A.},
+  Journal                  = {AIP Conference Proceedings},
+  Year                     = {2012},
+  Number                   = {1},
+  Pages                    = {1219-1226},
+  Volume                   = {1430},
+
+  Doi                      = {10.1063/1.4716358}
+}
+
+@InCollection{MoGuPlCoGuElCh09,
+  Title                    = {Advances in ultrasonic testing of austenitic stainless steel welds: Towards a {3D} description of the material including attenuation and optimisation by inversion},
+  Author                   = {J. Moysan and C. Gueudr\'e and M. A. Ploix and G. Corneloup and P. Guy and El Guerjouma, R. and B. Chassignole},
+  Booktitle                = {Ultrasonic Wave Propagation in Non-Homogeneous Media},
+  Publisher                = {Springer},
+  Year                     = {2009},
+
+  Address                  = {Berlin, Germany},
+  Editor                   = {A. L\'eger and M. Deschamps},
+  Series                   = {Springer Proceedings in Physics},
+  Volume                   = {128},
+
+  Doi                      = {10.1007/978-3-540-89105-5_2}
 }
 
 @Article{MuDeEtNi92,
@@ -14980,6 +15103,18 @@
   Volume                   = {24},
 
   Doi                      = {10.1080/17415977.2015.1046861}
+}
+
+@Article{Pal18,
+  Title                    = {Spectral methods for modelling of wave propagation in structures in terms of damage detection: {A} review},
+  Author                   = {Magdalena Palacz},
+  Journal                  = {Applied Sciences},
+  Year                     = {2018},
+  Number                   = {7},
+  Pages                    = {1124},
+  Volume                   = {8},
+
+  Doi                      = {10.3390/app8071124}
 }
 
 @InProceedings{Palmeri2014,
@@ -17947,6 +18082,18 @@
   Volume                   = {52}
 }
 
+@Article{SoFaMoKoCrArUr18,
+  Title                    = {How to adapt numerical simulation of wave propagation and ultrasonic laboratory experiments to be comparable - {A} case study for a complex topographic model},
+  Author                   = {Bence Solymosi and Favretto-Cristini, Nathalie and Vadim Monteiller and Dimitri Komatitsch and Paul Cristini and B. Arntsen and B. Ursin},
+  Journal                  = geophysics,
+  Year                     = {2018},
+  Number                   = {4},
+  Pages                    = {T195-T207},
+  Volume                   = {83},
+
+  Doi                      = {10.1190/geo2017-0536.1}
+}
+
 @Article{Song2014,
   Title                    = {Fast shear compounding using robust 2-{D} shear wave speed calculation and multi-directional filtering},
   Author                   = {Song, Pengfei and Manduca, Armando and Zhao, Heng and Urban, Matthew W. and Greenleaf, James F. and Chen, Shigao},
@@ -18472,6 +18619,18 @@
   Volume                   = {96},
 
   Doi                      = {10.1121/1.410434}
+}
+
+@Article{TaHo10,
+  Title                    = {A comparative evaluation of ultrasonic testing of {AISI 316L} welds made by shielded metal arc welding and gas tungsten arc welding processes},
+  Author                   = {Tabatabaeipour, S. Morteza and Farhang Honarvar},
+  Journal                  = {Journal of Materials Processing Technology},
+  Year                     = {2010},
+  Number                   = {8},
+  Pages                    = {1043-1050},
+  Volume                   = {210},
+
+  Doi                      = {10.1016/j.jmatprotec.2010.02.013}
 }
 
 @InProceedings{TaCrEtViBeSa10,
@@ -19410,7 +19569,7 @@
   Journal                  = gji,
   Year                     = {2017},
   Number                   = {3},
-  Pages                    = {1489},
+  Pages                    = {1489-1512},
   Volume                   = {209},
 
   Doi                      = {10.1093/gji/ggx103}
@@ -20275,7 +20434,7 @@
 @Article{Willberg2015,
   Title                    = {Simulation Methods for Guided Wave-Based Structural Health Monitoring: {A} Review},
   Author                   = {Willberg, C. C. and Duczek, S. S. and Vivar-Perez J. M. and Ahmad Z. B.},
-  Journal                  = {ASME. Appl. Mech. Rev.},
+  Journal                  = {ASME Appl. Mech. Rev.},
   Year                     = {2015},
   Note                     = {Paper No AMR-14-1030.},
   Number                   = {1},
@@ -20589,6 +20748,18 @@
   Doi                      = {10.4208/cicp.080409.051009a}
 }
 
+@Article{XuLiDo13,
+  Title                    = {Scalable hierarchical parallel algorithm for the solution of super large-scale sparse linear equations},
+  Author                   = {Ran Xu and Bin Liu and Yuan Dong},
+  Journal                  = {Journal of Applied Mechanics},
+  Year                     = {2013},
+  Number                   = {2},
+  Pages                    = {020901\_1-020901\_8},
+  Volume                   = {80},
+
+  Doi                      = {10.1115/1.4023481}
+}
+
 @Article{XuMc98,
   Title                    = {Efficient 3-{D} viscoelastic modeling with application to near-surface land seismic data},
   Author                   = {Xu, Tong and McMechan, George A.},
@@ -20691,6 +20862,17 @@
   Year                     = {1996},
   Pages                    = {343-367},
   Volume                   = {135}
+}
+
+@Article{YuChAuKoGaHe19,
+  Title                    = {Simulations of ultrasonic wave propagation in concrete based on a two-dimensional numerical model validated analytically and experimentally},
+  Author                   = {Ting Yu and Jean-Fran\c{c}ois Chaix and Lorenzo Audibert and Dimitri Komatitsch and Vincent Garnier and Jean-Marie H\'enault},
+  Journal                  = {Ultrasonics},
+  Year                     = {2019},
+  Pages                    = {21-34},
+  Volume                   = {92},
+
+  Doi                      = {10.1016/j.ultras.2018.07.018}
 }
 
 @Article{YuPa93,
