--- a/doc/USER_MANUAL/04_creating_databases.tex
+++ b/doc/USER_MANUAL/04_creating_databases.tex
@@ -168,8 +168,7 @@ model using Olsen's empirical relation (see \citet{OlDaBr03}).
 \item [{\texttt{OLSEN\_ATTENUATION\_RATIO}}] Determines the Olsen's constant
 in Olsen's empirical relation (see \citet{OlDaBr03}).
 \item [{\texttt{PML\_CONDITIONS}}] Set to \texttt{.true.} to turn on C-PML
-boundary conditions for a regional simulation. Both fluids and elastic
-solids are supported. Note that xmeshfem3d generated meshes do not support C-PML yet.
+boundary conditions for a regional simulation. Both fluids and elastic solids are supported.
 \item [{\texttt{PML\_INSTEAD\_OF\_FREE\_SURFACE}}] Set to \texttt{.true.}
 to turn on C-PML boundary conditions on the top surface instead of
 the usual free surface.
