--- a/EXAMPLES/meshfem3D_examples/README
+++ b/EXAMPLES/meshfem3D_examples/README
@@ -15,6 +15,10 @@ more complex example are provided in:
 
 - many_interfaces/: a model with topography and several internal interfaces defined
 
+extended examples:
+
+- 3D_CUBIT_mesh/: scripts for creating 3D mesh with curved free surface and fault. This example needs CUBIT. There are a lot of detailed descriptions in this example.
+
 please consider submitting your own example to this package! 
 email us: cig-seismo AT geodynamics.org
 
