--- a/EXAMPLES/Gmsh_simple_lddrk/README
+++ b/EXAMPLES/Gmsh_simple_lddrk/README
@@ -10,8 +10,10 @@ requires:
  * pygmsh     - python wrapper, see https://pypi.python.org/pypi/pygmsh
  * numpy      - scientific computing with python, see http://www.numpy.org
 
-tested for Gmsh version 3.0, pygmsh version 4.1.0, numpy version 1.14.0
 
+tested for:
+- python 2.7: Gmsh version 3.0, pygmsh version 4.1.0, numpy version 1.14.0
+- python 3.7: Gmsh version 4.0, pygmsh version 6.0.2, numpy version 1.17.2
 
 0. installation:
   
