--- a/utils/adjoint_sources/README
+++ b/utils/adjoint_sources/README
@@ -4,17 +4,23 @@ README
 
 This folder contains routines to create adjoint sources for:
 
-- traveltime/ subdirectory: cross-correlation traveltime adjoint sources 
+- traveltime/ directory: cross-correlation traveltime adjoint sources
 
-  this program cuts certain portion of the seismograms and converts them into 
+  this program cuts certain portion of the seismograms and converts them into
   the adjoint sources for generating banana-dougnut kernels.
   (see Tromp et al. (2005), eq. 45)
 
-- amplitude/ subdirectory: amplitude adjoint sources
+- amplitude/ directory: amplitude adjoint sources
 
   this program cuts a certain portion of displacement seismograms and
   converts them into adjoint sources for generating classical amplitude
   kernels following Tromp et al. (2005) eq. 67.  
+
+
+- waveform/ directory: waveform misfit adjoint sources
+
+  takes the waveform misfit between two corresponding seismograms and
+  converts it into the adjoint source (see Tromp et al. 2005, eq. 9)
 
 
 
