corrects typo, default name is tomograpy_model.xyz for tomo models

--- a/doc/USER_MANUAL/04_creating_databases.tex
+++ b/doc/USER_MANUAL/04_creating_databases.tex
@@ -118,7 +118,7 @@ Users must provide the corresponding data file \texttt{regrid3\_vel\_p.bin}
 in directory \texttt{DATA/st\_3D\_block\_harvard/}.
 
 \item [{\texttt{tomo}}] For a user-specified 3D isotropic model which uses
-a tomographic model file \texttt{tomographic\_model.xyz} in directory
+a tomographic model file \texttt{tomography\_model.xyz} in directory
 \texttt{DATA}. See Section \ref{sec:Using-tomographic}, for a discussion
 on how to specify your own 3D tomographic model.
 \end{description}
